criação do visualisar-cartao

--- a/application/modules/admin/views/scripts/cartao/visualisa-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/visualisa-cartao.phtml
@@ -15,7 +15,7 @@
     endif;
     ?>
     <!-- INICIO DO MENU EXTERNO-->
-    <div class="tabbable tabs-right">
+    <div class="tabbable tabs-left">
         <ul class="nav nav-tabs">
             <li class="active"><a href="#rA" data-toggle="tab">Criança</a></li>
             <li class=""><a href="#rB" data-toggle="tab">Adoscecente</a></li>
@@ -216,29 +216,29 @@
                                 
                                 <thead  style="font-size: 15px;">
                                     <tr>
-                                        <th colspan="7" style="background-color: #08c; color: #FFFFFF; font-size: 20px;text-align: center;">Registro das Vacinas do Calendário Basico</th>
+                                        <th colspan="7" style="background-color: #E6E6E6; color: #000; font-size: 20px;text-align: center;">Registro das Vacinas do Calendário Basico</th>
                                     </tr>
                                     <tr>
-                                        <th style="background-color: #08c; color: #FFFFFF">Nome completo:&nbsp;</th>
+                                        <th style="background-color: #E6E6E6; color: #000;">Nome completo:&nbsp;</th>
                                         <th colspan="6">Leonardo DaVinci</th>
                                         
 
                                     </tr>
                                     <tr>
-                                        <th style="background-color: #08c; color: #FFFFFF">Nome da mãe:&nbsp;</th>
+                                        <th style="background-color: #E6E6E6; color: #000;">Nome da mãe:&nbsp;</th>
                                         <th colspan="6">Monalisa</th>
                                         
 
                                     </tr>
                                     <tr>
-                                        <th style="background-color: #08c; color: #FFFFFF">Nome do pai:&nbsp;</th>
+                                        <th style="background-color: #E6E6E6; color: #000;">Nome do pai:&nbsp;</th>
                                         <th colspan="6">Miquelangelo</th>
                                         
 
 
                                     </tr>
                                     <tr>
-                                        <th style="background-color: #08c; color: #FFFFFF">Data de Nascimento:&nbsp;</th>
+                                        <th style="background-color: #E6E6E6; color: #000;">Data de Nascimento:&nbsp;</th>
                                         <th colspan="6">18/02/1451</th>
                                         
 
